# plotlypp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  json.hpp  parse.py  plot.hpp  plotlytest.py  sample.html  sample2.html  schema.json  test.cpp  trace.hpp  traits.hpp
examples/: CMakeLists.txt  example.cpp  test.cpp
generator/: parse.py  parsev0.py  schema.json
include/plotlypp/: json.hpp  plot.hpp  trace.hpp  traits.hpp
include/plotlypp/layout/: layout.hpp
include/plotlypp/layout/impl/: layout_impl.hpp
include/plotlypp/traces/: bar.hpp  barpolar.hpp  box.hpp  candlestick.hpp  carpet.hpp  choropleth.hpp  choroplethmap.hpp  choroplethmapbox.hpp  cone.hpp  contour.hpp  contourcarpet.hpp  densitymap.hpp  densitymapbox.hpp  funnel.hpp  funnelarea.hpp  heatmap.hpp  histogram.hpp  histogram2d.hpp  histogram2dcontour.hpp  icicle.hpp  image.hpp  indicator.hpp  isosurface.hpp  mesh3d.hpp  ohlc.hpp  parcats.hpp  parcoords.hpp  pie.hpp  sankey.hpp  scatter.hpp  scatter3d.hpp  scattercarpet.hpp  scattergeo.hpp  scattergl.hpp  scattermap.hpp  scattermapbox.hpp  scatterpolar.hpp  scatterpolargl.hpp  scattersmith.hpp  scatterternary.hpp  (+9 more)
include/plotlypp/traces/impl/: bar_impl.hpp  barpolar_impl.hpp  box_impl.hpp  candlestick_impl.hpp  carpet_impl.hpp  choropleth_impl.hpp  choroplethmap_impl.hpp  choroplethmapbox_impl.hpp  cone_impl.hpp  contour_impl.hpp  contourcarpet_impl.hpp  densitymap_impl.hpp  densitymapbox_impl.hpp  funnel_impl.hpp  funnelarea_impl.hpp  heatmap_impl.hpp  histogram2d_impl.hpp  histogram2dcontour_impl.hpp  histogram_impl.hpp  icicle_impl.hpp  image_impl.hpp  indicator_impl.hpp  isosurface_impl.hpp  mesh3d_impl.hpp  ohlc_impl.hpp  parcats_impl.hpp  parcoords_impl.hpp  pie_impl.hpp  sankey_impl.hpp  scatter3d_impl.hpp  scatter_impl.hpp  scattercarpet_impl.hpp  scattergeo_impl.hpp  scattergl_impl.hpp  scattermap_impl.hpp  scattermapbox_impl.hpp  scatterpolar_impl.hpp  scatterpolargl_impl.hpp  scattersmith_impl.hpp  scatterternary_impl.hpp  (+9 more)
